--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -26,26 +26,26 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Set up Docker Compose
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y docker-compose
-
-      - name: Build and Start the Application
-        run: |
-          docker-compose up -d  # Start the app in detached mode
-          sleep 15  # Wait for the app to start
-
-#      - name: Check Running Containers
-#        run: docker ps  # Debugging step to ensure containers are running
-      - name: Debug Running Containers
-        run: docker ps -a
+#      - name: Set up Docker Compose
+#        run: |
+#          sudo apt-get update
+#          sudo apt-get install -y docker-compose
+#
+#      - name: Build and Start the Application
+#        run: |
+#          docker-compose up -d  # Start the app in detached mode
+#          sleep 15  # Wait for the app to start
+#
+##      - name: Check Running Containers
+##        run: docker ps  # Debugging step to ensure containers are running
+#      - name: Debug Running Containers
+#        run: docker ps -a
 
       - name: Test Application (Check if it's running)
         run: curl -f http://localhost:8000
 
-      - name: Run Cypress Tests
-        run: docker-compose run cypress-tests  # Runs Cypress inside Docker
+#      - name: Run Cypress Tests
+#        run: docker-compose run cypress-tests  # Runs Cypress inside Docker
 
       - name: Upload Cypress test results
         if: always()
