--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -40,7 +40,10 @@ jobs:
 ##        run: docker ps  # Debugging step to ensure containers are running
 #      - name: Debug Running Containers
 #        run: docker ps -a
-
+      - name: Start the server
+        run: |
+          npm start
+          sleep 5 # Give it time to start
       - name: Test Application (Check if it's running)
         run: curl -f http://localhost:8000
 
