--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,28 +9,27 @@ services:
     image: nginx:alpine
     container_name: booking-app
     networks:
-      - test-network  # Ensure booking-app is attached to test-network
+      - test-network
     ports:
       - "8000:80"
-#    healthcheck:
-#      test: ["CMD", "curl", "-f", "http://booking-app:80"]
-#      interval: 10s
-#      retries: 5
-#      start_period: 30s
-#      timeout: 5s
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:80"]
+      interval: 10s
+      retries: 5
+      start_period: 30s
+      timeout: 5s
 
-  cypress-tests:  # Updated service name to match Dockerfile
-    build: .  # This ensures Cypress uses your custom Dockerfile
+  cypress-tests:
+    build: .  # Ensure you have a Dockerfile for Cypress
     container_name: cypress-tests
     depends_on:
       booking-app:
-#        condition: service_healthy  # Ensures Cypress waits for booking-app to be ready
+        condition: service_healthy  # Ensures Cypress waits for booking-app to be healthy
     networks:
-      - test-network  # Ensure cypress-tests is attached to test-network
+      - test-network
     environment:
       - CYPRESS_baseUrl=http://booking-app:80
     volumes:
       - .:/e2e
     working_dir: /e2e
-#    command: ["npx", "cypress", "run", "--config", "baseUrl=http://booking-app:80"]
-
+    command: ["npx", "cypress", "run", "--config", "baseUrl=http://booking-app:80"]
