--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -25,18 +25,18 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+#
+#      - name: Set up Docker Compose
+#        run: |
+#          sudo apt-get update
+#          sudo apt-get install -y docker-compose
+#
+#      - name: Start application server
+#        run: npm start &
 
-      - name: Set up Docker Compose
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y docker-compose
-
-      - name: Start application server
-        run: npm start &
-
-      - name: Run tests with Docker Compose
-        run: |
-          docker-compose up --exit-code-from cypress
+#      - name: Run tests with Docker Compose
+#        run: |
+#          docker-compose up --exit-code-from cypress
 
       - name: Run Cypress tests
         run: npx cypress run --config baseUrl=http://localhost:8000
